--- a/lab-i/index.html
+++ b/lab-i/index.html
@@ -12,6 +12,7 @@
 		Your browser does not support canvas. U mad bro.
 	</canvas>
 	<script src="/node_modules/gl-matrix/gl-matrix.js"></script>
+	<script src="js/vertices.js"></script>
 	<script src="js/resource.js"></script>
 	<script src="js/webgl.js"></script>
 </body>
