--- a/lab-iii/index.html
+++ b/lab-iii/index.html
@@ -11,77 +11,103 @@
 	<canvas id="gl-canvas">
 		Your browser does not support canvas. U mad bro.
 	</canvas>
-	<!-- <div class="ui">
-		<div class="add-buttons">
-			<input class="add-button" id="add-cube" type="button" value="Add cube">
-			<input class="add-button" id="add-pyramid" type="button" value="Add pyramid">
-			<input class="add-button" id="add-crystal" type="button" value="Add crystal">
-			<input class="delete-button" id="delete" type="button" value="Delete object">
+	<div class="ui">
+		<div class="controls-box">
+			<h3>Light</h3>
+			<div class="section__title">Light 1</div>
+			<label for="l1diff">Diffuse</label>
+			<input class="controls" type="color" value="#ff0000" id="l1diff">
+
+			<label for="">Specular</label>
+			<input class="controls" type="color" value="#ff0000" id="l1spec">
+
+			<br>
+			<label for="l1x">X</label>
+			<input class="controls" type="range" min="-1" max="1" step="0.05" value="0" id="l1x">
+			
+			<br>
+			<label for="l1y">Y</label>
+			<input class="controls" type="range" min="-1" max="1" step="0.05" value="0" id="l1y">
+
+			<br>
+			<label for="l1z">Z</label>
+			<input class="controls" type="range" min="-1" max="1" step="0.05" value="-1" id="l1z">
+
+			<br>
+			<label for="l1dst">Distance</label>
+			<input class="controls" type="number" value="20" id="l1dst">
+
+			<label for="l1shns">Shiness</label>
+			<input class="controls" type="number" value="20" id="l1shns">
+			
+
+			<div class="section__title">Light 2</div>
+			<label for="l2diff">Diffuse</label>
+			<input class="controls" type="color" value="#00ff00" id="l2diff">
+
+			<label for="">Specular</label>
+			<input class="controls" type="color" value="#00ff00" id="l2spec">
+
+			<br>
+			<label for="l2x">X</label>
+			<input class="controls" type="range" min="-1" max="1" step="0.05" value="0" id="l2x">
+			
+			<br>
+			<label for="l2y">Y</label>
+			<input class="controls" type="range" min="-1" max="1" step="0.05" value="0" id="l2y">
+
+			<br>
+			<label for="l2z">Z</label>
+			<input class="controls" type="range" min="-1" max="1" step="0.05" value="-1" id="l2z">
+
+			<br>
+			<label for="l2dst">Distance</label>
+			<input class="controls" type="number" value="20" id="l2dst">
+
+			<label for="l2shns">Shiness</label>
+			<input class="controls" type="number" value="20" id="l2shns">
+
+			<div class="section__title">Light 3</div>
+			<label for="l3diff">Diffuse</label>
+			<input class="controls" type="color" value="#0000ff" id="l3diff">
+
+			<label for="">Specular</label>
+			<input class="controls" type="color" value="#0000ff" id="l3spec">
+
+			<br>
+			<label for="l3x">X</label>
+			<input class="controls" type="range" min="-1" max="1" step="0.05" value="0" id="l3x">
+			
+			<br>
+			<label for="l3y">Y</label>
+			<input class="controls" type="range" min="-1" max="1" step="0.05" value="0" id="l3y">
+
+			<br>
+			<label for="l3z">Z</label>
+			<input class="controls" type="range" min="-1" max="1" step="0.05" value="-1" id="l3z">
+
+			<br>
+			<label for="l3dst">Distance</label>
+			<input class="controls" type="number" value="20" id="l3dst">
+
+			<label for="l3shns">Shiness</label>
+			<input class="controls" type="number" value="20" id="l3shns">
+
+			<h3>Material</h3>
+			<label for="mdiff">Diffuse</label>
+			<input class="controls" type="color" value="#ffffff" id="mdiff">
+
+			<label for="mspec">Specular</label>
+			<input class="controls" type="color" value="#ffffff" id="mspec">
 
 		</div>
-		<div class="list-objects">
-			<select name="list-objects" id="list-objects">
-			</select>
-		</div>
-		<div class="controls">
-			<h3>Object controls</h3>
-			<input class="reset-button" id="reset" type="button" value="Reset">
-			<div class="section__title">Translate</div>
-			<label for="translate-x" class="control-label">X</label>
-			<input value=50 class="control-translate" type="range" name="translate-x" id="translate-x">
-			<label for="translate-y" class="control-label">Y</label>
-			<input value=50 class="control-translate" type="range" name="translate-y" id="translate-y">
-			<label for="translate-z" class="control-label">Z</label>
-			<input value=50 class="control-translate" type="range" name="translate-z" id="translate-z">
-
-			<div class="section__title">Rotate</div>
-			<label for="rotate-x" class="control-label">X</label>
-			<input value=0 class="control-rotate" type="range" name="rotate-x" id="rotate-x">
-			<label for="rotate-y" class="control-label">Y</label>
-			<input value=0 class="control-rotate" type="range" name="rotate-y" id="rotate-y">
-			<label for="rotate-z" class="control-label">Z</label>
-			<input value=0 class="control-rotate" type="range" name="rotate-z" id="rotate-z">
-
-			<div class="section__title">Scale</div>
-			<label for="scale-x" class="control-label">X</label>
-			<input value=10 class="control-scale" type="range" name="scale-x" id="scale-x">
-			<label for="scale-y" class="control-label">Y</label>
-			<input value=10 class="control-scale" type="range" name="scale-y" id="scale-y">
-			<label for="scale-z" class="control-label">Z</label>
-			<input value=10 class="control-scale" type="range" name="scale-z" id="scale-z">
-
-			<h3>Camera controls</h3>
-
-			<div class="section__title">Camera move</div>
-			<label for="camera-mov-x" class="control-label">X</label>
-			<input value=50 class="control-camera-mov" type="range" name="camera-mov-x" id="camera-mov-x">
-			<label for="camera-mov-y" class="control-label">Y</label>
-			<input value=50 class="control-camera-mov" type="range" name="camera-mov-y" id="camera-mov-y">
-			<label for="camera-mov-z" class="control-label">Z</label>
-			<input value=60 class="control-camera-mov" type="range" name="camera-mov-z" id="camera-mov-z">
-
-			<div class="section__title">Camera rotation</div>
-			<label for="camera-rot-x" class="control-label">X</label>
-			<input value=0 class="control-camera-rot" type="range" name="camera-rot-x" id="camera-rot-x">
-			<label for="camera-rot-y" class="control-label">Y</label>
-			<input value=0 class="control-camera-rot" type="range" name="camera-rot-y" id="camera-rot-y">
-			<label for="camera-rot-z" class="control-label">Z</label>
-			<input value=0 class="control-camera-rot" type="range" name="camera-rot-z" id="camera-rot-z">
-
-			<div class="section-title">Perspective</div>
-			<label for="camera-fov" class="control-label">FOV</label>
-			<input value=12.5 class="control-camera-per" type="range" name="camera-fov" id="camera-fov">
-			<label for="camera-near" class="control-label">Near</label>
-			<input value=0.01 step=0.1 class="control-camera-per" type="range" name="camera-near" id="camera-near">
-			<label for="camera-far" class="control-label">Far</label>
-			<input value=100 class="control-camera-per" type="range" name="camera-far" id="camera-far">
-		</div>
-	</div> -->
+	</div>
 	<script src="/node_modules/gl-matrix/gl-matrix.js"></script>
 	<script src="/node_modules/philogl/build/PhiloGL.js"></script>
 	<script src="js/MV.js"></script>
 	<script src="js/MV2.js"></script>
 	<script src="js/webgl-utils.js"></script>
+	<script src="js/controls.js"></script>
 	<script src="js/vertices.js"></script>
 	<script src="js/resource.js"></script>
 	<script src="js/webgl.js"></script>
