--- a/lab-iv/index.html
+++ b/lab-iv/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 	<link rel="stylesheet" href="css/main.css">
-	<title>WebGl — Laboratory #2</title>
+	<title>WebGl</title>
 </head>
 <body>
 	<canvas id="gl-canvas">
