--- a/lab-iv/index.html
+++ b/lab-iv/index.html
@@ -16,6 +16,7 @@
 	<script src="/node_modules/gl-matrix/gl-matrix.js"></script>
 	<script src="/node_modules/webgl-obj-loader/dist/webgl-obj-loader.js"></script>
 	<script src="js/MV.js"></script>
+	<script src="js/controls.js"></script>
 	<script src="js/GlObject.js"></script>
 	<script src="js/resource.js"></script>
 	<script src="js/vertices.js"></script>
