Add input to dynamically change mesh and texture

--- a/lab-iv/index.html
+++ b/lab-iv/index.html
@@ -12,6 +12,9 @@
 	<canvas id="gl-canvas">
 		Your browser does not support canvas. U mad bro.
 	</canvas>
+
+	<input type="file" id="mesh-loader">
+	<input type="file" id="texture-loader">
 	
 	<script src="/node_modules/gl-matrix/gl-matrix.js"></script>
 	<script src="/node_modules/webgl-obj-loader/dist/webgl-obj-loader.js"></script>
