Change accept attr for input:files

--- a/lab-iv/index.html
+++ b/lab-iv/index.html
@@ -13,8 +13,8 @@
 		Your browser does not support canvas. U mad bro.
 	</canvas>
 
-	<input type="file" id="mesh-loader">
-	<input type="file" id="texture-loader">
+	<input type="file" id="mesh-loader" accept="image/obj">
+	<input type="file" id="texture-loader" accept="image/jpeg,image/png,image/gif">
 	
 	<script src="/node_modules/gl-matrix/gl-matrix.js"></script>
 	<script src="/node_modules/webgl-obj-loader/dist/webgl-obj-loader.js"></script>
